==> HUANsic/CrackNuts-Nuts-ESP32/components/NutsLib/NutsLib.c <==
#include "NutsLib.h"
#include "user.h"
#include "driver/gpio.h"
#include "driver/uart.h"
#include "driver/i2c.h"
#include "driver/spi_slave.h"
#include "esp_log.h"
#include "esp_attr.h"
#include "string.h"
#include "unistd.h"

uint32_t _NutComm_DecodeHeader()
{
	uint32_t length;
	uint8_t i;
	uint16_t command;
	/* Decode the header */
	command = rx_buffer[0];
	command <<= 8;
	command |= rx_buffer[1];
	length = rx_buffer[4];
	length <<= 8;
	length |= rx_buffer[5];
	length <<= 8;
	length |= rx_buffer[6];
	length <<= 8;
	length |= rx_buffer[7];
	/* Parse command */
	cmd_program = 0;
	for (i = 0; i < command_count; i++)
	{
		if (command_list[i].command == command)
		{
			cmd_program = command_list[i].function; // set the program
			break;
		}
	}
	/* If the command is not found, then continue to receive the payload if possible */
	if (!cmd_program)
	{
		status = NUT_WARNING;
		error = NUT_ERROR_CMD_UNKNOWN;
		ESP_LOGW(TAG, "  Command unknown: %04X", command);
	}
	if (length > NUT_BUFFER_SIZE)
	{
		status = NUT_ERROR;
		error = NUT_ERROR_PAYLOAD_SIZE;
		ESP_LOGE(TAG, "  Input payload size too large: %ld", length);
	}
	return length;
}

void _NutComm_SPI_Quit()
{
	/* Wait until CSn releases */
	while (gpio_get_level(NUT_SPI_CS_PIN) == 0)
		;
}

void _NutComm_SPI_Error()
{
	/* Wait until chip not selected */
	while (gpio_get_level(NUT_SPI_CS_PIN) == 0)
		;
}

void _NutComm_I2C_Error()
{
	i2c_reset_rx_fifo(NUT_I2C);
	i2c_reset_tx_fifo(NUT_I2C);
}

void Nut_Loop()
{
	esp_err_t retstatus = ESP_OK;
	size_t length;
	uint32_t response_length = 0;
	uint32_t i;

	/* Check UART */
	uart_get_buffered_data_len(NUT_UART, &length);
	if (length > 0)
	{
		/* Record the first byte of header */
		retstatus = uart_read_bytes(NUT_UART, rx_buffer, 1, 10);

		/* Finish receiving the header */
		for (i = 1; i < 8;)
		{
			retstatus = uart_read_bytes(NUT_UART, rx_buffer + i, 1, 10);
			if (retstatus == 1)
			{
				i++;
			}
			/* in case of timeout and error, must exit because UART is special and must not get stuck */
			else if (retstatus == -1)
			{
				status = NUT_ERROR;
				error = NUT_ERROR_UNKNOWN;
				ESP_LOGE(TAG, "  Timeout or error during UART header receive.[1]");
				_NutComm_UART_Quit();
				return;
			}
		}

		/* Decode header */
		status = NUT_OK;
		length = _NutComm_DecodeHeader();
		/* If ERROR occurred, prepare to send error package */
		if (status == NUT_ERROR)
		{
			/* Wait until the other side to finish transmission */
			for (i = 0; i < length;)
			{
				retstatus = uart_read_bytes(NUT_UART, rx_buffer + i, 1, 10);
				if (retstatus == 1)
				{
					i++;
				}
				/* in case of timeout and error, must exit because UART is special and must not get stuck */
				else if (retstatus == -1)
				{
					status = NUT_ERROR;
					error = NUT_ERROR_UNKNOWN;
					ESP_LOGE(TAG, "  Timeout or error during UART header receive.[2]");
					_NutComm_UART_Quit();
					return;
				}
			}
			/* Send error package */
			tx_buffer[0] = NUT_ERROR;
			tx_buffer[1] = NUT_ERROR_PAYLOAD_SIZE;
			tx_buffer[2] = 0;
			tx_buffer[3] = 0;
			tx_buffer[4] = 0;
			tx_buffer[5] = 0;
			uart_write_bytes(NUT_UART, tx_buffer, 6); // no need to check whether it is successful
			_NutComm_UART_Quit();
			return;
		}
		/* Receive the payload */
		for (i = 0; i < length;)
		{
			retstatus = uart_read_bytes(NUT_UART, rx_buffer + i, 1, 10);
			if (retstatus == 1)
			{
				i++;
			}
			/* in case of timeout and error, must exit because UART is special and must not get stuck */
			else if (retstatus == -1)
			{
				status = NUT_ERROR;
				error = NUT_ERROR_UNKNOWN;
				ESP_LOGE(TAG, "  Timeout or error during UART header receive.[3]");
				_NutComm_UART_Quit();
				return;
			}
		}
		/* Process the command and give feedback */
		if (cmd_program)
		{
			status = cmd_program(rx_buffer, length, tx_buffer, &response_length, NUT_BUFFER_SIZE);
			/* Send response package according to response length */
			if (response_length > NUT_BUFFER_SIZE)
			{
				tx_buffer[0] = NUT_ERROR;
				tx_buffer[1] = NUT_ERROR_PAYLOAD_SIZE;
				tx_buffer[2] = 0;
				tx_buffer[3] = 0;
				tx_buffer[4] = 0;
				tx_buffer[5] = 0;
				uart_write_bytes(NUT_UART, tx_buffer, 6); // no need to check whether it is successful
				ESP_LOGE(TAG, "  Output payload size too large: %ld", response_length);
				_NutComm_UART_Quit();
				return;
			}
			else
			{
				/* Prepare header */
				if (status == NUT_OK)
				{
					tx_buffer[0] = NUT_OK;
					tx_buffer[1] = 0;
				}
				else
				{
					tx_buffer[0] = NUT_ERROR;
					tx_buffer[1] = NUT_ERROR_USER_CODE;
				}
				tx_buffer[2] = 0x0FF & (response_length >> 24);
				tx_buffer[3] = 0x0FF & (response_length >> 16);
				tx_buffer[4] = 0x0FF & (response_length >> 8);
				tx_buffer[5] = 0x0FF & (response_length);
				/* Send the header */
				uart_write_bytes(NUT_UART, tx_buffer, 6);
				/* Then send the payload */
				for (i = 0; i < response_length;)
				{
					retstatus = uart_write_bytes(NUT_UART, tx_buffer + i, 1);
					if (retstatus == 1)
					{
						i++;
					}
					/* in case of timeout and error, must exit because UART is special and must not get stuck */
					else if (retstatus == -1)
					{
						status = NUT_ERROR;
						error = NUT_ERROR_UNKNOWN;
						ESP_LOGE(TAG, "  Timeout or error during UART header receive.[3]");
						_NutComm_UART_Quit();
						return;
					}
				}
				_NutComm_UART_Quit();
				return;
			}
		}
		/* Command not found, return error */
		else
		{
			tx_buffer[0] = NUT_ERROR;
			tx_buffer[1] = NUT_ERROR_CMD_UNKNOWN;
			tx_buffer[2] = 0;
			tx_buffer[3] = 0;
			tx_buffer[4] = 0;
			tx_buffer[5] = 0;
			uart_write_bytes(NUT_UART, tx_buffer, 6); // no need to check whether it is successful
			ESP_LOGE(TAG, "  Command not found.");
			_NutComm_UART_Quit();
			return;
		}
	}

	/* Check SPI */
	else if (gpio_get_level(NUT_SPI_CS_PIN) == 0)
	{
		/* Poll for header */
		hspi.length = 8;
		retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
		if (retstatus != ESP_OK)
		{
			status = NUT_WARNING;
			error = NUT_ERROR_SPI_ABORTED;
			_NutComm_SPI_Quit();
			return;
		}
		/* if CS is released midway (in case of timeout) */
		if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
		{
			status = NUT_WARNING;
			error = NUT_ERROR_SPI_ABORTED;
			_NutComm_SPI_Quit();
			return;
		}
		/* Decode header */
		length = _NutComm_DecodeHeader();
		/* If ERROR occurred, prepare to send error package */
		if (status == NUT_ERROR)
		{
			/* Wait until the other side to finish transmission */
			for (i = 0; i < length;)
			{
				hspi.length = 1;
				retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
				if (retstatus == ESP_OK)
				{
					i++;
				}
				/* if CS is released midway (in case of timeout) */
				else if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
			}
			/* Send error package */
			tx_buffer[0] = NUT_ERROR;
			tx_buffer[1] = NUT_ERROR_PAYLOAD_SIZE;
			tx_buffer[2] = 0;
			tx_buffer[3] = 0;
			tx_buffer[4] = 0;
			tx_buffer[5] = 0;
			hspi.length = 6;
			retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
			if (retstatus != ESP_OK)
			{
				status = NUT_WARNING;
				error = NUT_ERROR_SPI_ABORTED;
				_NutComm_SPI_Quit();
				return;
			}
			/* if CS is released midway (in case of timeout) */
			if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
			{
				status = NUT_WARNING;
				error = NUT_ERROR_SPI_ABORTED;
				_NutComm_SPI_Quit();
				return;
			}
			/* And just return */
			_NutComm_SPI_Quit();
			return;
		}
		/* Receive the payload */
		hspi.length = length;
		hspi.user = 0; // yes, I am assigning a value to a pointer
		retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
		if (retstatus != ESP_OK)
		{
			status = NUT_WARNING;
			error = NUT_ERROR_SPI_ABORTED;
			_NutComm_SPI_Quit();
			return;
		}
		/* Process the command and give feedback */
		if (cmd_program)
		{
			status = cmd_program(rx_buffer, length, tx_buffer, &response_length, NUT_BUFFER_SIZE);
			/* Send response package according to response length */
			if (response_length > NUT_BUFFER_SIZE)
			{
				tx_buffer[0] = NUT_ERROR;
				tx_buffer[1] = NUT_ERROR_PAYLOAD_SIZE;
				tx_buffer[2] = 0;
				tx_buffer[3] = 0;
				tx_buffer[4] = 0;
				tx_buffer[5] = 0;
				hspi.length = 6;
				retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
				if (retstatus != ESP_OK)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				/* if CS is released midway (in case of timeout) */
				if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				_NutComm_SPI_Quit();
				return;
			}
			else
			{
				/* Prepare header */
				if (status == NUT_OK)
				{
					tx_buffer[0] = NUT_OK;
					tx_buffer[1] = 0;
				}
				else
				{
					tx_buffer[0] = NUT_ERROR;
					tx_buffer[1] = NUT_ERROR_USER_CODE;
				}
				tx_buffer[2] = 0x0FF & (response_length >> 24);
				tx_buffer[3] = 0x0FF & (response_length >> 16);
				tx_buffer[4] = 0x0FF & (response_length >> 8);
				tx_buffer[5] = 0x0FF & (response_length);
				/* Send the header */
				hspi.length = 6;
				retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
				if (retstatus != ESP_OK)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				/* if CS is released midway (in case of timeout) */
				if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				/* Then send the payload */
				hspi.length = response_length;
				retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
				if (retstatus != ESP_OK)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				/* if CS is released midway (in case of timeout) */
				if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
				{
					status = NUT_WARNING;
					error = NUT_ERROR_SPI_ABORTED;
					_NutComm_SPI_Quit();
					return;
				}
				_NutComm_SPI_Quit();
				return;
			}
		}
		/* Command not found, return error */
		else
		{
			tx_buffer[0] = NUT_ERROR;
			tx_buffer[1] = NUT_ERROR_CMD_UNKNOWN;
			tx_buffer[2] = 0;
			tx_buffer[3] = 0;
			tx_buffer[4] = 0;
			tx_buffer[5] = 0;
			hspi.length = 6;
			retstatus = spi_slave_transmit(NUT_SPI, &hspi, 100);
			if (retstatus != ESP_OK)
			{
				status = NUT_WARNING;
				error = NUT_ERROR_SPI_ABORTED;
				_NutComm_SPI_Quit();
				return;
			}
			/* if CS is released midway (in case of timeout) */
			if (gpio_get_level(NUT_SPI_CS_PIN) != 0)
			{
				status = NUT_WARNING;
				error = NUT_ERROR_SPI_ABORTED;
				_NutComm_SPI_Quit();
				return;
			}
			_NutComm_SPI_Quit();
			return;
		}
	}

	/* Check I2C */
	else if (0)
	{
		// TODO
	}
}

void Nut_Init()
{
	ESP_LOGI(TAG, "Nut Initialization Start.");
	_NutComm_Init();
	User_Init();
	ESP_LOGI(TAG, "Nut Initialization Done.");
}

void Nut_LED(uint8_t on)
{
	gpio_set_level(NUT_LED_PIN, on ? 0 : 1);
}

void Nut_IO_1(uint8_t set)
{
	gpio_set_level(NUT_IO1_PIN, set ? 1 : 0);
}

void Nut_IO_2(uint8_t set)
{
	gpio_set_level(NUT_IO2_PIN, set ? 1 : 0);
}

void Nut_IO_3(uint8_t set)
{
	gpio_set_level(NUT_IO3_PIN, set ? 1 : 0);
}

uint8_t Nut_IO_USER()
{
	return (uint8_t)gpio_get_level(NUT_IO_USER_PIN);
}
